--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
-  dio: ^4.0.4
+  url_launcher: ^6.0.20
+  share_plus: ^4.0.3
 
 dev_dependencies:
   flutter_test:
